<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:text="Disclaimer"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/disclamier_content"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chk_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continues"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@color/buttonDisable"
        android:enabled="false"
        android:layout_marginBottom="10dp"/>

</LinearLayout>