<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edt_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:inputType="date"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/optional"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:paddingRight="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/gender"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <RadioGroup
            android:checkedButton="@+id/rad_male"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/white_out_line"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rad_female"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/toggle_widget_background"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:button="@null"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@drawable/option_bg_color" />

            <RadioButton
                android:id="@+id/rad_male"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@drawable/option_bg_color" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/optional"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:paddingRight="5dp"
        />

</LinearLayout>