<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/main_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:src="@drawable/logo"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorButtonBg"
        android:textColor="@color/colorButtonFore"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/find_account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorButtonBg"
            android:layout_marginLeft="5dp"
            android:text="@string/signup"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/txt_recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:text="@string/recover_password"
            android:gravity="bottom|center_horizontal"/>

    </LinearLayout>


</LinearLayout>
