<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="@color/dialog_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/white_round_line"
        android:orientation="vertical"
        android:weightSum="100" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:gravity="center"
            android:text="@string/disclaimer"
            android:textColor="@color/colorDotSelect"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:text="@string/disclamier_content"
            android:textColor="@color/colorBlueBalck"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="100" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:textColor="@color/colorBlueBalck"
                android:text="@string/accept"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ok_check"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/red_round_line"
            android:text="@string/continues"
            android:textSize="16sp"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" ></View>

</LinearLayout>
