<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.sodabodyfit.moms.PlusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/colorDotNonSelect"
        android:gravity="center_vertical"
        android:weightSum="100"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/cancel"
            android:textColor="@color/colorRed"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/add_to_one_workout"
            android:gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_workout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/plus_icon_select" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:text="@string/new_workout"
            android:gravity="center_vertical"
            android:textColor="@color/colorRed"
            android:textSize="16sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorNumber"
        android:layout_margin="10dp" />
    <ListView
        android:id="@+id/workout_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="77"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    </ListView>

</LinearLayout>
