<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_container"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/colorNavMenu"
    android:layout_gravity="right">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40" >

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="37dp"
            android:text="Hi, you"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="70dp" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/settings_icon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:id="@+id/ll_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="70dp" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/disclaimer_icon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="70dp" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/logout_icon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="70dp" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/lang_icon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <RadioGroup
        android:checkedButton="@+id/rd_english"
        android:id="@+id/toggle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_out_line"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_english"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/lang_english"
            android:textColor="@drawable/option_bg_color" />

        <RadioButton
            android:id="@+id/rd_dutch"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/lang_dutch"
            android:textColor="@drawable/option_bg_color" />
    </RadioGroup>
</LinearLayout>